postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow-postgres
spec:
  selector:
    app: mlflow-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
