proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow-proxy
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: mlflow-proxy-tls
spec:
  selector:
    app.kubernetes.io/name: mlflow
    app.kubernetes.io/instance: mlflow
  ports:
    - name: proxy
      protocol: TCP
      port: 4180
      targetPort: 4180
