route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mlflow
  labels:
    shard: internal
spec:
  to:
    kind: Service
    name: mlflow-proxy
  port:
    targetPort: proxy
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
